<resources>
    <string name="app_name">Band App</string>

    <string name="label_google_sign_in">Firebase + Google Sign In</string>
    <string name="label_home">Band App - Home</string>


    <string name="desc_google_sign_in">Use a Google Sign In credential to authenticate with Firebase.</string>

    <string name="label_facebook_login">Band App - Facebook Login</string>
    <string name="desc_facebook_login">Use Facebook to log in to Band App.</string>

    <string name="label_twitter_login">Band App - Twitter Login</string>
    <string name="desc_twitter_login">Use Twitter to log in to Band App.</string>

    <string name="label_emailpassword">Band App - Email/Password Login</string>
    <string name="desc_emailpassword">Use email/password to log in to Band App.</string>

    <string name="label_passwordless">Passwordless Authentication</string>
    <string name="desc_passwordless">Use only an email to authenticate with Firebase.</string>

    <string name="label_phone_auth">Phone Number Authentication</string>
    <string name="desc_phone_auth">Use a phone number to authenticate with Firebase.</string>

    <string name="label_anonymous_auth">Anonymous Authentication</string>
    <string name="desc_anonymous_auth">Sign in anonymously and then later upgrade to a full Firebase Auth user.</string>

    <string name="label_custom_auth">Band App - Sign In</string>
    <string name="desc_custom_auth">Use a custom token signed by your own server to authenticate with Firebase.</string>

    <string name="label_firebase_ui">FirebaseUI Auth</string>
    <string name="desc_firebase_ui">Use the FirebaseUI-Android library to authenticate with Firebase.</string>

    <string name="hint_user_id">User ID</string>
    <string name="get_custom_token">Get Token</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="send_link">Send Link</string>
    <string name="sign_out">Sign Out</string>
    <string name="verify_email">Verify Email</string>
    <string name="disconnect">Disconnect</string>
    <string name="loading">Loading…</string>
    <string name="custom_token">Custom Token</string>
    <string name="signed_in">Signed In</string>
    <string name="signed_out">Signed Out</string>
    <string name="token_null">Token: null</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="start_phone_auth">Start</string>
    <string name="verify_phone_auth">Verify</string>
    <string name="resend_phone_auth">Resend</string>
    <string name="hint_phone_number">Phone Number</string>
    <string name="hint_verification_code">Verification Code</string>
    <string name="status_code_sent">Code Sent</string>
    <string name="status_verification_failed">Verification failed</string>
    <string name="status_verification_succeeded">Verification succeeded</string>
    <string name="status_sign_in_failed">Sign-in failed</string>
    <string name="instant_validation">(instant validation)</string>

    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="firebase_user_management">Firebase User Management</string>

    <string name="google_status_fmt">Google User: %s</string>
    <string name="google_title_text">Google Sign In</string>

    <string name="facebook_status_fmt">Facebook User: %s</string>
    <string name="facebook_title_text">Facebook Login</string>

    <string name="emailpassword_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="emailpassword_title_text">Email/Password Login</string>

    <string name="passwordless_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="passwordless_title_text">Passwordless Sign In</string>
    <string name="status_email_not_sent">Send link to your email to get started.</string>
    <string name="status_email_sent">Link sent, check your email to continue.</string>
    <string name="status_link_found">Link received, enter email to sign in.</string>

    <string name="phone_title_text">Phone Number</string>

    <string name="twitter_status_fmt">Twitter User: %s</string>
    <string name="twitter_title_text">Twitter Login</string>

    <string name="firebaseui_status_fmt">Firebase User: %s</string>
    <string name="firebaseui_title_text">FirebaseUI Auth</string>

    <string name="id_fmt">User ID: %s</string>
    <string name="email_fmt">Email: %s</string>
    <string name="desc_facebook_header">Facebook Login</string>
    <string name="desc_twitter_header">Twitter Login</string>
    <string name="desc_emailpassword_header">Email/Password Login</string>
    <string name="home_title_text">Home Page</string>
    <string name="username">Username</string>
    <string name="firebase_user_name">User Name: %s</string>
    <string name="firebase_genre_name">Genres: %s</string>

    <string name="title_activity_register">Band App - Register</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="band_hint">Band Name</string>
    <string name="bandcity_hint">City</string>
    <string name="register_text">Looks Like You\'re New. Tell Us About Your Band</string>
    <string name="action_register">Register</string>
    <string name="band">Band</string>
    <string name="firebase_band_name">Band Name: %s</string>
    <string name="sign_out_home">Sign Out</string>
    <string name="genre_text">What Kind of Music Do you Play?</string>
    <string name="genre">Genre</string>
    <string name="upload_text">Upload a profile picture</string>
    <string name="storage">Storage URL</string>
    <string name="storage_url">Storage URL</string>
    <string name="firebase_storage_text">Storage URL: %s</string>
    <string name="login_text">Log In To Band App</string>
    <string name="city">City</string>
    <string name="firebase_city_name">City: %s</string>
    <string name="rotate_text">rotate value!</string>
</resources>
