<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">
    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="3"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/icon"
                    android:layout_width="wrap_content"
                    android:layout_height="166dp"
                    android:contentDescription="@string/desc_firebase_lockup"
                    android:src="@drawable/firebase_lockup_400" />

                <TextView
                    android:id="@+id/title_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/title_bottom_margin"
                    android:text="@string/home_title_text"
                    android:theme="@style/ThemeOverlay.MyTitleText" />

                <TextView
                    android:id="@+id/status"
                    style="@style/ThemeOverlay.MyTextDetail"
                    android:text="@string/signed_out" />

                <TextView
                    android:id="@+id/detail"
                    style="@style/ThemeOverlay.MyTextDetail"
                    android:text="Firebase User ID: 123456789abc" />

                <TextView
                    android:id="@+id/user"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/username"
                    android:textAlignment="center" />

                <TextView
                    android:id="@+id/band"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/band"
                    android:textAlignment="center" />

                <TextView
                    android:id="@+id/genre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/genre"
                    android:textAlignment="center" />

                <TextView
                    android:id="@+id/city"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/city"
                    android:textAlignment="center" />

                <ImageView
                    android:id="@+id/facebook_photo"
                    android:layout_width="wrap_content"
                    android:layout_height="250dp"
                    android:layout_marginTop="@dimen/activity_horizontal_margin"
                    android:contentDescription="@string/desc_firebase_lockup"
                    android:src="@drawable/firebase_lockup_400" />

                <LinearLayout
                    android:id="@+id/signed_in_buttons"
                    android:layout_width="260dp"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:weightSum="1.0">

                    <Button
                        android:id="@+id/sign_out_home_button"
                        style="@style/Widget.AppCompat.Button.Colored"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="16dp"
                        android:layout_weight="1"
                        android:text="@string/sign_out_home"
                        android:textAlignment="center"
                        android:theme="@style/ThemeOverlay.MyDarkButton" />

                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>


</LinearLayout>