<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.mbeargie.bandapp.RegisterActivity">

    <!-- Login progress -->
    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />


        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/register_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/title_bottom_margin"
                android:text="@string/register_text"
                android:theme="@style/ThemeOverlay.MyRegisterText" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <AutoCompleteTextView
                    android:id="@+id/bandname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/band_hint"
                    android:inputType="text"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/bandcity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/bandcity_hint"
                    android:inputType="text"
                    android:maxLines="1"
                    android:singleLine="true" />

                <TextView
                    android:id="@+id/genre_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/title_bottom_margin"
                    android:text="@string/genre_text"
                    android:theme="@style/ThemeOverlay.MyRegisterText" />

                <CheckBox
                    android:id="@+id/genre_rock"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:text="Rock" />
                <CheckBox
                    android:id="@+id/genre_hip_hop"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:text="Hip Hop" />

                <CheckBox
                    android:id="@+id/genre_country"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:text="Country" />


            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

    <TextView
        android:id="@+id/upload_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/title_bottom_margin"
        android:text="@string/upload_text"
        android:theme="@style/ThemeOverlay.MyRegisterText" />

        <LinearLayout
            android:id="@+id/layout_button"
            android:orientation="horizontal"
            android:layout_alignParentTop="true"
            android:weightSum="2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">



            <Button
                android:id="@+id/btnChoose"
                style="@style/Widget.AppCompat.Button.Colored"
                android:text="Choose"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/btnUpload"
                android:text="Upload"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <ImageView
            android:id="@+id/imgView"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <Button
            android:id="@+id/register_button"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/action_register"
            android:textStyle="bold"
            android:theme="@style/ThemeOverlay.MyDarkButton"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
